--- a/api/.env.example
+++ b/api/.env.example
@@ -2,3 +2,4 @@ SECRET_KEY=<your secret key>
 SQLALCHEMY_DATABASE_URI=<your database uri>
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 JWT_SECRET_KEY=<your jwt secret key>
+JWT_VERIFY_SUB = False
